# objective

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: build-macos.yml
backend/: events.py  server.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  FRONTEND_ARCHITECTURE.md  README.md  ROADMAP.md  SYSTEM_OVERVIEW.md  spec.md  spec02.md
docs/agents/: audio_producer.md  broadcast_writer.md  claim_extractor.md  contradiction_detector.md  entity_extractor.md  evaluation_engine.md  event_clustering_engine.md  ingestion_coordinator.md  memory_consolidator.md  narrative_analyzer.md  overview.md  political_framing_analyzer.md  scheduler_daemon.md  source_reliability_evaluator.md  temporal_graph_updater.md
docs/architecture/: broadcast_synthesis.md  claim_provenance_engine.md  continuous_daemon.md  contradiction_management.md  event_flow.md  high_level.md  local_inference.md  memory_lifecycle.md  narrative_drift_engine.md  orchestration.md  resilience.md  runtime_lifecycle.md  scheduler.md  streaming_pipeline.md  temporal_event_graph.md
docs/audio/: atmospherics.md  broadcast_scheduler.md  (+6 more)
electron/: electron-builder.yml  index.html  package-lock.json  package.json  vite.config.ts
prompts/: broadcast_writer.md  claim_extractor.md  contradiction_detector.md  entity_extractor.md  framing_analyzer.md  narrative_analyzer.md
scripts/: build-macos.sh  generate-assets.sh  notarize.js
src/: __init__.py  cli.py  config.py  main.py  prompts.py
tests/: dashboard.py  test_end_to_end.py  test_graph.py  test_models.py
(+90 files in other folders)
